--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Newsletter</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="./style.css">
     <script src="./dynamic.js"></script>
 </head>
 <body>
     <div class="body"> 
-        <h1>DESIGN AND MANUFACTURING</h1>
-        <div class="welcome">
-            Hey, welcome to cnat newsletter, I'll be taking you on a journey into design engineering and manufacturing, driving your enthusiasm in industrial changes and how it affect Nigeria
+        <div class="header">
+            <h1>Design and Manufacturing</h1>
+            <p class="welcome">Hey, welcome to cnat newsletter, I'll be taking you on a journey into design engineering and manufacturing, driving your enthusiasm in industrial changes and how it affect Nigeria
+            </p>
         </div>
+        
         <div class="formBg">
             <form action="" >
                 <div class="form">
@@ -25,7 +27,15 @@
                 <button type="submit" class="submit">SUBMIT</button>
             </form>
         </div>
+
+        <p class="spam">I promise not to spam you</p>
         
     </div>
+
+    <hr>
+
+    <footer>
+        <p>© 2020 Cnat, all rights reserved</p> 
+    </footer>
 </body>
 </html> 
