style: inline color palette added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
     <div class="body"> 
         <div class="header">
             <h1>Design and Manufacturing</h1>
+            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                <tr>
+                    <td width="126" bgcolor="#ff74c3" height="3" class="img" style="font-size:0pt; line-height:0pt; text-align:left;">&nbsp;</td>
+                    <td class="img" width="5" style="font-size:0pt; line-height:0pt; text-align:left;"></td>
+                    <td width="126" bgcolor="#7474ff" height="3" class="img" style="font-size:0pt; line-height:0pt; text-align:left;">&nbsp;</td>
+                    <td class="img" width="5" style="font-size:0pt; line-height:0pt; text-align:left;"></td>
+                    <td width="126" bgcolor="#74ffd0" height="3" class="img" style="font-size:0pt; line-height:0pt; text-align:left;">&nbsp;</td>
+                    <td class="img" width="5" style="font-size:0pt; line-height:0pt; text-align:left;"></td>
+                    <td width="126" bgcolor="#fff474" height="3" class="img" style="font-size:0pt; line-height:0pt; text-align:left;">&nbsp;</td>
+                    <td class="img" width="5" style="font-size:0pt; line-height:0pt; text-align:left;"></td>
+                    <td width="126" bgcolor="#ff7b74" height="3" class="img" style="font-size:0pt; line-height:0pt; text-align:left;">&nbsp;</td>
+                </tr>
+            </table>
             <p class="welcome">Hey, welcome to cnat newsletter, I'll be taking you on a journey into design engineering and manufacturing, driving your enthusiasm in industrial changes and how it affect Nigeria
             </p>
         </div>
@@ -24,7 +37,7 @@
                 <input type="text" name="email" placeholder="EMAIL" id="" class="middle">
                 </div>
                 
-                <button type="submit" class="submit">SUBMIT</button>
+                <button type="submit" class="submit">SUBSCRIBE</button>
             </form>
         </div>
 
