style: edit the submitted text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     
     <div class="card"> 
-      <p class="welcome">Hey, welcome to cnat newsletter, I'll be taking you on a journey into design engineering
+      <p class="welcome" id="welcome">Hey, welcome to cnat newsletter, I'll be taking you on a journey into design engineering
         and manufacturing, driving your enthusiasm in industrial changes and how it affect Nigeria
       </p>
       <form>
